# PHANTOM_LEIGON

./: .coordinator.db  .osint_memory.sqlite3  .phantom_coordinator.sqlite3  .smoke_memory.sqlite3  Insane_Ramblings  README.md  pyproject.toml
.github/workflows/: ci.yml
Cyberdeck Integration/Display/: Display server.py
Cyberdeck Integration/Processing/: IMU daemon class
Cyberdeck Integration/Processing/Getting UUID/: UUID get.py
Cyberdeck Integration/Processing/Kimset/: Dual-Adapter Config.sh  Kismet.conf  headless start  query devices.py
Cyberdeck Integration/Sensing/: Calibration motions.py  Calibration.py
Cyberdeck Integration/cyberdeck/: .gitignore
Cyberdeck Integration/cyberdeck/config/: dnsmasq.conf  hostapd.conf  kismet.conf
Cyberdeck Integration/cyberdeck/scripts/: get_source_uuids.py
Cyberdeck Integration/cyberdeck/src/cyberdeck/: __init__.py  main.py
models/: neural_ranker.pt
src/osint_agent/: __init__.py  archive.py  bridge.py  cli.py  crawler.py  engine.py  exporting.py  gui.py  launcher.py  learning.py  legion.py  links.py  memory.py  pdfs.py  ranking.py  report.py  schema.py  search.py  supervisor.py  visualize.py  worker.py
src/osint_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: README.md  test_archive_wayback.py  test_bridge.py  test_cli_reports.py  test_coordinator_worker.py  test_launcher.py  test_legion.py  test_system_integration.py  test_target_tracking.py  test_trainer.py  test_worker_dispatch.py
tools/: smoke_run.py  smoke_train.py
tools/bridge_client/: bridge_client.ino
(+20 files in other folders)
